--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -84,6 +84,8 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 - 刺激：用户点击柱状图和环状图的某一部分
 - 相应：系统跳转至相应论文
 
+## 3.3 流程3-查看排序
+
 # **4  功能需求**
 
 ## **4.1  功能清单**
@@ -212,13 +214,13 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 创建者         | 濮宗悦                                                       |
 | 创建日期       | 2020-03-13                                                   |
 | 最后一次更新者 | 濮宗悦                                                       |
-| 更新日期       | 2020-03-16                                                   |
+| 更新日期       | 2020-03-23                                                   |
 | 参与者         | 普通用户                                                     |
 | 触发条件       | 用户点击某个领域词条。                                       |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该领域词条页面，展示：<br />1. 领域的基本信息：名称、简介、发表论文数、活跃度<br /> 2. 近5年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域（词云形式展示）。<br />3.1 包含词与相应的活跃度。<br />4. top作者、top论文和top会议，按照活跃度的排序。<br />4.1 作者需包含其姓名、论文数和被引数目<br />4.2 论文需包含其标题、被引用数。<br />4.3 会议需包含其名称、论文数和被引用数。 |
+| 正常流程       | 系统跳转至该领域词条页面，展示：<br />1. 领域的基本信息：名称、简介、发表论文数、活跃度<br /> 2. 近5年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域（词云形式展示）。<br />3.1 包含词与相应的活跃度。<br />3.2 词云中元素的大小与元素领域和当前领域关系的紧密程度相对应，紧密程度计算方式为【两个领域同时出现在一篇论文中】的次数多少<br/>4. top作者、top论文和top会议，按照活跃度的排序。<br />4.1 作者需包含其姓名、论文数和被引数目<br />4.2 论文需包含其标题、被引用数。<br />4.3 会议需包含其名称、论文数和被引用数。 |
 | 扩展流程       | 1.1 活跃度：paper数的和（以3年为周期，每向前3年paper数除以Math.ceiling（今年-当年年份/3）） |
 | 特殊需求       | 无                                                           |
 
@@ -229,14 +231,14 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 名称           | 学者画像                                                     |
 | 创建者         | 王雪君                                                       |
 | 创建日期       | 2020-03-13                                                   |
-| 最后一次更新者 | 王雪君                                                       |
-| 更新日期       | 2020-03-13                                                   |
+| 最后一次更新者 | 濮宗悦                                                       |
+| 更新日期       | 2020-03-23                                                   |
 | 参与者         | 普通用户                                                     |
 | 触发条件       | 用户选择了某个学者                                           |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该学者主页，展示：<br/>1. 学者基本信息：姓名、简介、所属机构，发表paper数、被引用数，活跃度，领域。<br/>2. 近5年paper数、被引、H-index、活跃度、热度指数统计图。<br/>3. 学者之间合作关系<br />3.1 散点图，按照活跃度表示点的大小。<br />3.2 合作相同论文的作者同色。<br />4. top论文<br />4.1 按照活跃度排序。 |
+| 正常流程       | 系统跳转至该学者主页，展示：<br/>1. 学者基本信息：姓名、简介、所属机构，发表paper数、被引用数，活跃度，领域。<br/>2. 近5年paper数、被引、H-index、活跃度、热度指数统计图。<br/>3. 学者之间合作关系<br />3.1 关系图，按照活跃度表示点的大小。<br />3.2 不同颜色反应不同合作关系的紧密程度<br />3.3 边的权重为合作关系的紧密程度 <br />3.4 合作关系的紧密程度按照【两个作者合作论文】次数的大小决定<br />3.5 图中节点只包含和当前学者的一度关系，边为展示的所有节点之间的关系<br/>4. top论文<br />4.1 按照引用数排序。 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
 
@@ -247,14 +249,14 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 名称           | 机构画像                                                     |
 | 创建者         | 丁玲燕                                                       |
 | 创建日期       | 2020-03-07                                                   |
-| 最后一次更新者 | 丁玲燕                                                       |
-| 更新日期       | 2020-03-13                                                   |
+| 最后一次更新者 | 濮宗悦                                                       |
+| 更新日期       | 2020-03-23                                                   |
 | 参与者         | 普通用户                                                     |
 | 触发条件       | 用户选择了某个研究机构                                       |
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该研究机构主页，展示：<br />1. 研究机构基本信息：名称、简介、现有研究人员数、发表paper数、总被引用数、活跃度<br />2. 近5年paper、被引、H-index、活跃度、热度指数统计图<br />3. 主要学术方向饼图，主要方向前五中重要学者<br /><br />3.1 重要学者：可以按被引数、H-index或paper数，或者三者按照442比例加权排序。<br />3.2 重要学者列出前5<br />3.3 每个学者包含其近5年论文发表情况柱状图<br />4. 研究机构关系图，合作关系密切的研究机构及合作的方向。<br />4.1 采取散点图，图之间关系为主要合作研究方向，权重为论文数<br />5. top作者和top论文<br />5.1 按照活跃度排序。 |
+| 正常流程       | 系统跳转至该研究机构主页，展示：<br />1. 研究机构基本信息：名称、简介、现有研究人员数、发表paper数、总被引用数、活跃度<br />2. 近5年paper、被引、H-index、活跃度、热度指数统计图<br />3. 主要学术方向饼图，主要方向前五中重要学者<br />3.1 饼图百分比计算：某个学术方向的论文数/总论文数<br />3.2 重要学者：可以按被引数、H-index或paper数，或者三者按照442比例加权排序。<br />3.3 重要学者列出前5<br />4. 研究机构关系图，合作关系密切的研究机构。<br />4.1 关系图，按照活跃度表示点的大小。<br />4.2 不同颜色反应不同合作关系的紧密程度<br />4.3 边的权重为合作关系的紧密程度 <br />4.4 合作关系的紧密程度按照【两个机构合作论文】次数的大小决定<br />4.5 图中节点只包含和当前机构的一度关系，边为展示的所有节点之间的关系<br/>5. top作者和top论文<br />5.1 按照活跃度排序。 |
 | 扩展流程       |                                                              |
 | 特殊需求       | 1. 作者名称和研究方向可以点击进入详情画像                    |
 
