--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -82,9 +82,42 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
     - 环状图显示论文的标题、发表年份、作者
     - 词云显示该词热度
 - 刺激：用户点击柱状图和环状图的某一部分
-- 相应：系统跳转至相应论文
+- 响应：系统跳转至相应论文
 
 ## 3.3 流程3-查看排序
+
+#### 3.3.1 查看学者排序
+
+- 刺激：用户点击首页学者排序图或者"Authors" button
+- 响应：系统跳转至学者排序界面，包括：
+  - 学者的研究领域筛选工具栏
+  - 按照活跃度排序的学者列表
+  - 搜索框
+- 刺激：用户选中工具栏中的某个或多个研究领域
+- 响应：系统返回该领域下按照活跃度排序的学者列表
+- 刺激：用户选择按照论文总数 / 总被引用数 / 热度排序
+- 响应：系统返回按照相应规则排序的学者列表
+- 刺激：用户使用搜索框搜索特定学者
+- 响应：系统返回名字和搜索内容匹配的学者
+- 刺激：用户点击某个学者项
+- 响应：系统返回该学者的详细画像页面
+
+
+
+#### 3.3.2 查看会议 / 机构 / 领域排序
+
+- 刺激：用户点击首页会议 / 机构 / 领域排序图或者"Conference" / "Affiliation" / "Fields" button
+- 响应：系统跳转至相应排序界面，包括：
+  - 按照活跃度排序的会议 / 机构 / 领域列表
+  - 搜索框
+- 刺激：用户选择按照论文总数 / 总被引用数 / 热度 / 拥有学者数排序
+- 响应：系统返回按照相应规则排序的会议 / 机构 / 领域列表
+- 刺激：用户使用搜索框搜索特定会议 / 机构 / 领域
+- 响应：系统返回名字和搜索内容匹配的会议 / 机构 / 领域
+- 刺激：用户点击某个会议 / 机构 / 领域项
+- 响应：系统返回该会议 / 机构 / 领域的详细画像页面
+
+
 
 # **4  功能需求**
 
