--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -253,7 +253,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该领域词条页面，展示：<br />1. 领域的基本信息：名称、活跃度、发表论文数、引用数、热度、H-index<br /> 2. 近10年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域（词云形式展示）。<br />3.1 包含词与相应的活跃度。<br />3.2 词云中元素的大小与元素领域和当前领域关系的紧密程度相对应，紧密程度计算方式为【两个领域同时出现在一篇论文中】的次数多少<br/>4. top作者、top论文和top会议。<br />4.1 作者需包含其姓名、活跃度、论文数和被引数目。按照活跃度排序<br />4.2 论文需包含其标题、被引用数。按照被引用数排序<br />4.3 会议需包含其名称、活跃度、论文数和被引用数。按照活跃度排序。 |
+| 正常流程       | 系统跳转至该领域词条页面，展示：<br />1. 领域的基本信息：名称、活跃度、发表论文数、引用数、热度、H-index<br /> 2. 近10年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域（词云形式展示）。<br />3.1 包含词与相应的活跃度。<br />3.2 词云中元素的大小与元素领域和当前领域关系的紧密程度相对应，紧密程度计算方式为【两个领域同时出现在一篇论文中】的次数多少<br/>4. top作者、top论文和top机构。<br />4.1 作者需包含其姓名、活跃度、论文数和被引数目。按照活跃度排序<br />4.2 论文需包含其标题、被引用数。按照被引用数排序<br />4.3 机构需包含其名称、活跃度、论文数和被引用数。按照活跃度排序。 |
 | 扩展流程       | 1.1 活跃度：paper数的和（以3年为周期，每向前3年paper数除以Math.ceiling（今年-当年年份/3）） |
 | 特殊需求       | 无                                                           |
 
