update: update test logs

--- a/Iteration_2/测试文档.md
+++ b/Iteration_2/测试文档.md
@@ -2,7 +2,7 @@
 
 #### **项目名称：OASIS**
 
-#### **版本号：V0.1**
+#### **版本号：V0.4**
 
 文档修订记录
 
@@ -10,24 +10,43 @@
 | -------- | --------- | ---------------------- | -------------------- |
 | V0.1     | 2020.2.18 | 濮宗悦、丁玲燕、王雪君 | 构建草稿             |
 | V0.2     | 2020.3.2  | 陆放明                 | 添加数据导入相关测试 |
+| V0.3     | 2020.3.15 | 陆放明                 | 图分析相关测试       |
+| V0.4     | 2020.4.1  | 陆放明                 | 细化功能测试用例     |
 
 ### 1. 单元测试用例
 
-| 编号 | 测试内容         | 测试结果 | 测试结果 |
-| ---- | ---------------- | -------- | -------- |
-| TSU1 | 数据导入         | 正确     |          |
-| TSU2 | 论文数据模糊搜索 | 正确     |          |
-| TSU3 | 论文列表二次搜索 | 正确     |          |
-| TSU4 | 报表展示         | 正确     |          |
-| TSU5 | 数据初始化       | 正确     |          |
+| 编号 | 测试内容                              | 测试结果 |
+| ---- | ------------------------------------- | -------- |
+| TSU1 | 数据导入                              | 正确     |
+| TSU2 | 论文数据模糊搜索                      | 正确     |
+| TSU3 | 论文列表二次搜索                      | 正确     |
+| TSU4 | 报表展示                              | 正确     |
+| TSU5 | 数据初始化                            | 正确     |
+| TSU6 | 关联度图分析                          | 正确     |
+| TSU7 | 数据列表获取 (涉及条件筛选与分页排序) | 正确     |
+| TSU8 | 基本实体详细数据获取                  | 正确     |
 
 ### 2. 功能测试用例
 
-| 编号 | 名称                               | 输入内容         | 预期结果                                               | 实际结果 |
-| ---- | ---------------------------------- | ---------------- | ------------------------------------------------------ | -------- |
-| 1    | 论文模糊搜索                       | 关键词，查询范围 | 论文列表分页显示<br>按照指定的匹配优先级展示           | 正确     |
-| 2    | 论文组合搜索<br>与二级筛选         | 点击summary内容  | 基于前一次的论文搜索内容进行筛选<br>Cookie内容正常更新 | 正确     |
-| 3    | 论文最多引用的作者<br>TOP $k$ 查看 | 点击数据报表查看 | 页面正常渲染                                           | 正确     |
-| 4    | 论文数量趋势查看                   | 点击数据报表查看 | 页面正常渲染<br>按照年份进行曲线图绘制                 | 正确     |
-| 5    | 数据初始化                         | 用户点击初始化   | 论文展示正常，数据<br>正常导入                         | 正确     |
+| 编号 | 名称                               | 输入内容                                  | 预期结果                                                     | 实际结果 |
+| ---- | ---------------------------------- | ----------------------------------------- | ------------------------------------------------------------ | -------- |
+| 1    | 论文模糊搜索                       | 关键词，查询范围                          | 论文列表分页显示<br>按照指定的匹配优先级展示                 | 正确     |
+| 2    | 论文组合搜索<br>与二级筛选         | 点击summary内容                           | 基于前一次的论文搜索内容进行筛选<br>Cookie内容正常更新       | 正确     |
+| 3    | 论文最多引用的作者<br>TOP $k$ 查看 | 点击数据报表查看                          | 页面正常渲染                                                 | 正确     |
+| 4    | 论文数量趋势查看                   | 点击数据报表查看                          | 页面正常渲染<br>按照年份进行曲线图绘制                       | 正确     |
+| 5    | 数据初始化                         | 用户点击初始化                            | 论文展示正常，数据<br>正常导入                               | 正确     |
+| 6    | 作者图分析获取                     | 随机选取作者id                            | 获得相应作者数据，和关联作者数据                             | 正确     |
+| 7    | 作者图分析获取                     | 错误id                                    | 给出空集返回                                                 | 正确     |
+| 8    | 机构图分析获取                     | 随机选取机构id                            | 正确获取机构数据，和关联机构数据                             | 正确     |
+| 9    | 会议图分析获取                     | 随机选取会议id                            | 正确获取会议核心节点数据<br>以及关联数据                     | 正确     |
+| 10   | 领域图分析获取                     | 随机选取领域id                            | 正确获取中心领域和相关领域                                   | 正确     |
+| 11   | 作者TOP论文获取                    | 给出指定作者                              | 正确返回作者论文列表，并且<br>按照引用数逆序排序             | 正确     |
+| 12   | 机构TOP作者获取                    | 给出指定机构                              | 正确返回作者列表，并且<br>按照活跃度逆序排序                 | 正确     |
+| 13   | 作者领域分析                       | 选取某一特定作者                          | 正确返回作者发表论文的领域内容                               | 正确     |
+| 14   | 机构领域分析                       | 选取某一特定机构                          | 正确返回机构所属的领域内容                                   | 正确     |
+| 15   | 作者列表获取                       | 用户选择查看作者<br>ranking页             | 分页返回作者列表，并且按照活跃度逆序排列                     | 正确     |
+| 16   | 机构列表获取                       | 用户选择查看机构<br>ranking页             | 分页返回机构列表，并且按照活跃度进行逆序排列                 | 正确     |
+| 17   | 领域列表获取                       | 用户选择查看领域<br/>ranking页            | 分页返回领域列表，并且按照活跃度进行逆序排列                 | 正确     |
+| 18   | 会议列表获取                       | 用户选择查看会议<br/>ranking页            | 分页返回会议列表，并且按照活跃度进行逆序排列                 | 正确     |
+| 19   | 作者领域summary                    | 用户选择需要查看作者<br>列表的总结summary | 按照名称和次数的格式返回作者领域summary<br>可以依据此进行二次筛选 | 正确     |
 
