--- a/Iteration_2/需求规格说明书.md
+++ b/Iteration_2/需求规格说明书.md
@@ -253,7 +253,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该领域词条页面，展示：<br />1. 领域的基本信息：名称、活跃度、发表论文数、引用数、热度、H-index<br /> 2. 历年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域（词云形式展示）。<br />3.1 包含词与相应的活跃度。<br />3.2 词云中元素的大小与元素领域和当前领域关系的紧密程度相对应，紧密程度计算方式为【两个领域同时出现在一篇论文中】的次数多少<br/>4. top作者、top论文和top机构。<br />4.1 作者需包含其姓名、活跃度、论文数和被引数目。按照活跃度排序<br />4.2 论文需包含其标题、被引用数。按照被引用数排序<br />4.3 机构需包含其名称、活跃度、论文数和被引用数。按照活跃度排序。<br /> |
+| 正常流程       | 系统跳转至该领域词条页面，展示：<br />1. 领域的基本信息：名称、活跃度、发表论文数、引用数、热度、H-index<br /> 2. 历年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br />3. 与此领域相关的领域（词云形式展示）。<br />3.1 包含词与相应的活跃度。<br />3.2 词云中元素的大小为活跃度。<br/>4. top作者、top论文和top机构。<br />4.1 作者需包含其姓名、活跃度、论文数和被引数目。按照活跃度排序<br />4.2 论文需包含其标题、被引用数。按照被引用数排序<br />4.3 机构需包含其名称、活跃度、论文数和被引用数。按照活跃度排序。<br /> |
 | 扩展流程       | 1.1 活跃度：paper数的和（以3年为周期，每向前3年paper数除以Math.ceiling（今年-当年年份/3）） |
 | 特殊需求       | 无                                                           |
 
@@ -271,7 +271,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该学者主页，展示：<br/>1. 学者基本信息：姓名、所属机构，活跃度、发表论文数、引用数、热度、H-index，领域。<br/>2. 历年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br/>3. 学者之间合作关系<br />3.1 关系图，按照活跃度表示点的大小。<br />3.2 不同颜色反应不同合作关系的紧密程度<br />3.3 边的权重为合作关系的紧密程度 <br />3.4 合作关系的紧密程度按照【两个作者合作论文】次数的大小决定<br />3.5 图中节点只包含和当前学者的一度关系<br/>4. top论文<br />4.1 按照引用数排序。<br />5. 主要学术领域饼图<br />5.1 展示该会议主要涉及领域。<br /> |
+| 正常流程       | 系统跳转至该学者主页，展示：<br/>1. 学者基本信息：姓名、所属机构，活跃度、发表论文数、引用数、热度、H-index，领域。<br/>2. 历年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图。<br/>3. 学者之间合作关系<br />3.1 关系图，按照活跃度表示点的大小。<br />3.2 图中节点只包含和当前学者的一度关系<br/>4. top论文<br />4.1 按照引用数排序。<br />5. 主要学术领域饼图<br />5.1 展示该会议主要涉及领域。<br /> |
 | 扩展流程       | 见 4.5.1扩展功能                                             |
 | 特殊需求       | 无                                                           |
 
@@ -289,7 +289,7 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 前置条件       | 无                                                           |
 | 后置条件       | 无                                                           |
 | 优先级         | 高                                                           |
-| 正常流程       | 系统跳转至该研究机构主页，展示：<br />1. 研究机构基本信息：名称、现有研究人员数、活跃度、发表论文数、引用数、热度、H-index<br />2. 历年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图<br />3. 主要学术领域饼图<br />3.1 展示该机构主要涉及领域。<br />4. 研究机构关系图，合作关系密切的研究机构。<br />4.1 关系图，按照活跃度表示点的大小。<br />4.2 不同颜色反应不同合作关系的紧密程度<br />4.3 边的权重为合作关系的紧密程度 <br />4.4 合作关系的紧密程度按照【两个机构合作论文】次数的大小决定<br />4.5 图中节点只包含和当前机构的一度关系<br/>5. top作者和top论文<br />5.1 作者需包含其姓名、活跃度、论文数和被引数目。按照活跃度排序<br />5.2 论文需包含其标题、被引用数。按照被引用数排序<br /> |
+| 正常流程       | 系统跳转至该研究机构主页，展示：<br />1. 研究机构基本信息：名称、现有研究人员数、活跃度、发表论文数、引用数、热度、H-index<br />2. 历年论文数、被引用数、H-index、活跃度、热度（总被引用数/发表论文总数）指数统计图<br />3. 主要学术领域饼图<br />3.1 展示该机构主要涉及领域。<br />4. 研究机构关系图，合作关系密切的研究机构。<br />4.1 关系图，按照活跃度表示点的大小。<br />4.2 图中节点只包含和当前机构的一度关系<br/>5. top作者和top论文<br />5.1 作者需包含其姓名、活跃度、论文数和被引数目。按照活跃度排序<br />5.2 论文需包含其标题、被引用数。按照被引用数排序<br /> |
 | 扩展流程       | 见 4.5.1扩展功能                                             |
 | 特殊需求       | 1. 作者名称和研究方向可以点击进入详情画像                    |
 
