update：迭代三用例细化

--- a/Iteration_3/需求规格说明书.md
+++ b/Iteration_3/需求规格说明书.md
@@ -2,7 +2,7 @@
 
 #### **项目名称：OASIS**
 
-#### **版本号：V0.1**
+#### **版本号：V0.7**
 
  文档修订记录
 
@@ -13,6 +13,8 @@
 | v0.3     | 2020.3.7  | 丁玲燕                         | 增加数据初始化需求 |      |
 | v0.4     | 2020.3.14 | 濮宗悦、丁玲燕、王雪君         | 增加迭代二用例     |      |
 | v0.5     | 2020.3.16 | 陆放明、濮宗悦、丁玲燕、王雪君 | 细化迭代二用例     |      |
+| v0.6     | 2020.5.20 | 陆放明、濮宗悦、丁玲燕、王雪君 | 增加迭代三用例     |      |
+| v0.7     | 2020.5.25 | 陆放明、濮宗悦、丁玲燕、王雪君 | 细化迭代三用例     |      |
 
 # **1  引言**
 
@@ -119,6 +121,35 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 
 
 
+## 3.4 流程4 - 查看趋势分析
+
+#### 3.4.1 查看领域趋势
+
+- 刺激：用户在主页中点击trend button
+
+- 响应：系统跳转至Trend页面
+
+- 刺激：用户输入想要查看的领域关键词
+
+- 响应：系统提供模糊匹配的结果
+
+- 刺激：用户从匹配结果中选择一个领域
+
+- 响应：系统展示该领域的整体活跃度趋势以及相关领域
+
+
+
+#### 3.4.2 查看学者研究兴趣分析
+
+- 刺激：用户点击某个学者项
+- 响应：系统展示该学者主页，研究兴趣分析部分包括：
+  - （年份，最关注领域）列表
+  - （默认）最近年份关注领域的个人活跃度趋势和整体活跃度趋势
+- 刺激：用户选择其它年份的关注领域
+- 响应：展示该年份领域的个人活跃度和整体活跃度
+
+
+
 # **4  功能需求**
 
 ## **4.1  功能清单**
@@ -128,6 +159,16 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 3. 复合关键词搜索
 4. 二次搜索
 5. 报表展示
+6. 领域画像
+7. 学者画像
+8. 机构画像
+9. 会议画像
+10. 领域实体排序
+11. 学者实体排序
+12. 机构实体排序
+13. 会议实体排序
+14. 领域趋势展示
+15. 学者研究兴趣分析
 
 ## 4.2  模块1-初始化
 
@@ -384,6 +425,46 @@ OASIS: （Online grAph System for acdemIcS）学术关系图谱系统
 | 正常流程       | 1.会议排序默认方法为活跃度，可以改为论文总数、总被引数、研究人员数、热度<br />2.  在本页可以按照名称搜索会议 |
 | 扩展流程       | 无                                                           |
 | 特殊需求       | 无                                                           |
+
+## 4.7 模块6-趋势分析
+
+### 4.7.1 功能1-领域趋势展示
+| 用例编号       | UC6-1                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 领域趋势展示                                                 |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-05-20                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-06-20                                                   |
+| 参与者         | 普通用户                                                     |
+| 触发条件       | 用户添加想要展示的领域                                       |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 用户进入领域趋势展示界面<br />2. 用户输入想要展示的领域关键词，从模糊匹配的结果中选择添加<br />3. 以折线图的方式展示添加的领域的活跃度趋势（横轴为年份，纵轴为活跃度）<br />4. 以列表的方式展示添加的领域的相关领域 |
+| 扩展流程       | 2a. 用户删除已经添加的领域关键词<br />1. 将该关键词的趋势从折线图中移除<br />2. 将该关键词的相关领域从列表中移除 <br />2b. 用户添加的关键词多于5个<br />1. 不允许用户继续添加 |
+| 特殊需求       | 无                                                           |
+
+
+### 4.7.2 功能2-学者研究兴趣分析
+
+| 用例编号       | UC6-2                                                        |
+| -------------- | ------------------------------------------------------------ |
+| 名称           | 学者研究兴趣分析                                             |
+| 创建者         | 丁玲燕                                                       |
+| 创建日期       | 2020-05-20                                                   |
+| 最后一次更新者 | 丁玲燕                                                       |
+| 更新日期       | 2020-06-18                                                   |
+| 参与者         | 普通用户                                                     |
+| 触发条件       | 用户进入学者主页                                             |
+| 前置条件       | 无                                                           |
+| 后置条件       | 无                                                           |
+| 优先级         | 高                                                           |
+| 正常流程       | 1. 展示该学者年度最关注领域列表（年份, 热词）<br />2. 默认展示最近年份领域在该学者学术生涯中的活跃度趋势以及该领域的整体活跃度趋势<br />3. 用户选中不同年份的领域<br />4. 展示该领域的学者个人活跃度趋势以及整体趋势 |
+| 扩展流程       | 无                                                           |
+| 特殊需求       | 无                                                           |
+
+
 
 #  **5  接口需求**
 
